# rust-clipstash-app

./: .gitignore  Cargo.toml
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  expires.rs  hits.rs  password.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  ctx.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
