[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
serde = "1.0.130"
serde_json = "1.0.68"
thiserror = "1.0.29"
uuid =  { version = "0.8.2", features = ["serde", "v4"] }
