[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
rand = "0.8.4"
serde = { version= "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
uuid =  { version = "0.8.2", features = ["serde", "v4"] }
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
handlebars = { version = "4.1.3", features = ["dir_source"] }